# data_structure_with_python

./: .python-version  pyproject.toml
app/: Untitled.ipynb  연결리스트 test.ipynb  연결리스트.ipynb  원형 리스트.ipynb
app/.ipynb_checkpoints/: 연결리스트-checkpoint.ipynb
app/config/: settings.py
